
- fix swapped red & blue channels when exporting from BMPs

- handle broken tables better and try to load as much as possible

- static element preprocessing is now done on the GPU (which leads to a faster VPX-player start)
- increase preprocessing sample rate for the static parts of the table

- cleanup Light Debugger dialog and fix 2nd color button

- improve script editing performance again

- improve mouse cursor hide/unhide in (windowed) fullscreen

- fix 'O'-key ball debugging

- fix crash if sound card(s) hardware/driver setup changed

- fix crash on tables with weird table info

- fix out of memory crashes (Video capture and Image Manager)

- fix wrong detection of alpha when loading BMPs stored in .vpx

- fix potential multi-threading screw-up when loading textures

- fix changing the timer settings not marking the table as dirty

- fix 'paste at' (and others) coordinates

- fix deleting of sub part included in a collection warning

- fix keyboard navigation in Material dialogue

- fix .bmp export in the Image Manager

- fix Image manager overwriting alpha mask value for selected images on import

- fix gate two-way flag import from VP9/8 .vpts

- improve UI scaling on high resolutions (e.g. 4K)

- fix the resize of the line number column in the script editor to accommodate for larger font sizes and size of script loaded

- update example tables with new raytraced ball shadows enabled and other new features
- add better wood texture

- update FreeImage library to latest 3.19.0 beta (custom build with more optimizations enabled, less dependencies, and a special FP16 path for .exr files)
  see https://github.com/toxieainc/freeimage

- DirectX 8 port for input handling (currently disabled)

- see Changelog_Scripts.txt for the respective core script changes (version 3.60, 3.61)
- see CommandReference.txt for the changelog of all the scripting properties/interface changes